--- a/web/index.html
+++ b/web/index.html
@@ -396,6 +396,10 @@
                 <span class="header-link-icon">📚</span>
                 <span>API Docs</span>
             </a>
+            <a href="https://github.com/metaid-developers/meta-media-service/blob/main/UPLOAD_FLOW.md" target="_blank" class="header-link">
+                <span class="header-link-icon">📖</span>
+                <span>Upload Guide</span>
+            </a>
             <a href="https://github.com/metaid-developers/meta-media-service" target="_blank" class="header-link">
                 <span class="header-link-icon">⭐</span>
                 <span>GitHub</span>
