fix: fix host for web

--- a/web/index.html
+++ b/web/index.html
@@ -392,7 +392,7 @@
 
         <!-- Header Links -->
         <div class="header-links">
-            <a href="/swagger/index.html" target="_blank" class="header-link">
+            <a id="swaggerLink" href="swagger/index.html" target="_blank" class="header-link">
                 <span class="header-link-icon">📚</span>
                 <span>API Docs</span>
             </a>
@@ -528,7 +528,7 @@
     </div>
 
     <!-- Include meta-contract library (local version 0.3.35) -->
-    <script src="/static/metacontract.min.js"></script>
+    <script src="static/metacontract.min.js"></script>
     <script>
         // Check if library is loaded successfully
         window.addEventListener('DOMContentLoaded', function() {
@@ -543,7 +543,7 @@
             }, 100);
         });
     </script>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
 
