feat: add indexer

--- a/web/index.html
+++ b/web/index.html
@@ -392,6 +392,10 @@
 
         <!-- Header Links -->
         <div class="header-links">
+            <a href="http://file.metaid.io/metafile-indexer" class="header-link" style="background: linear-gradient(135deg, #17a2b8 0%, #667eea 100%);">
+                <span class="header-link-icon">📊</span>
+                <span>Go to Indexer</span>
+            </a>
             <a id="swaggerLink" href="swagger/index.html" target="_blank" class="header-link">
                 <span class="header-link-icon">📚</span>
                 <span>API Docs</span>
